--- a/PhotoCollector/Base.lproj/Main.storyboard
+++ b/PhotoCollector/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Collector-->
         <scene sceneID="dcW-8a-EP7">
             <objects>
-                <tableViewController id="COA-m3-gc1" sceneMemberID="viewController">
+                <tableViewController id="COA-m3-gc1" customClass="CollectableTableViewController" customModule="PhotoCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Pla-b7-4aM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -43,10 +43,10 @@
             </objects>
             <point key="canvasLocation" x="81" y="102"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Collectable View Controller-->
         <scene sceneID="B3u-qn-4Vq">
             <objects>
-                <viewController id="Hf9-gX-Z0e" sceneMemberID="viewController">
+                <viewController id="Hf9-gX-Z0e" customClass="CreateCollectableViewController" customModule="PhotoCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JfA-JQ-D0M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,8 +61,11 @@
                                 <rect key="frame" x="192" y="470" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addButtonTpped:" destination="Hf9-gX-Z0e" eventType="touchUpInside" id="abk-u1-AZf"/>
+                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gMF-Fd-IZk">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gMF-Fd-IZk">
                                 <rect key="frame" x="43" y="117" width="329" height="265"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -72,10 +75,22 @@
                     </view>
                     <navigationItem key="navigationItem" id="1Ui-ae-qOf">
                         <rightBarButtonItems>
-                            <barButtonItem systemItem="camera" id="JFg-jY-RqK"/>
-                            <barButtonItem systemItem="organize" id="7bL-77-nVi"/>
+                            <barButtonItem systemItem="camera" id="JFg-jY-RqK">
+                                <connections>
+                                    <action selector="cameraTapped:" destination="Hf9-gX-Z0e" id="Kmr-g0-Xp6"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="organize" id="7bL-77-nVi">
+                                <connections>
+                                    <action selector="mediaFolderTapped:" destination="Hf9-gX-Z0e" id="359-O9-YLk"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="gMF-Fd-IZk" id="vcb-lG-H7r"/>
+                        <outlet property="textField" destination="i3D-c9-vPl" id="uT3-qV-ZwU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cAX-gE-WnP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -98,4 +113,7 @@
             <point key="canvasLocation" x="-781" y="102"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" catalog="system" width="64" height="48"/>
+    </resources>
 </document>
